text analyis happy part and d3 class selector change fill

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
 
     <div class="container">
       <h1 class="text-center">Mapping Tweets</h1>
+      <h4 class="text-center">Made with Node JS and D3 JS</h4>
       <br>
       <div id="chart" class="text-center">
       </div>
