emoticons working and legend added

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
   <body>
 
     <div class="container">
-      <h1 class="text-center">Mapping Tweets</h1>
-      <h4 class="text-center">Made with Node JS and D3 JS</h4>
+      <h1 class="text-center">Mapping Global Tweets Real-Time</h1>
+      <h4 class="text-center">Made with Node JS, D3 JS and PubNub</h4>
       <br>
       <div id="chart" class="text-center">
       </div>
