--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
   <body>
 
     <div class="container">
-      <h1 class="text-center">Mapping Global Tweets Real-Time</h1>
-      <h4 class="text-center">Made with Node JS, D3 JS and PubNub</h4>
+      <h1 class="text-center">How is the world feeling now?</h1>
+      <h4 class="text-center">Mapping tweets in real-time. Made with Node and D3</h4>
+      <p>All tweets on Twitter are analyzed in real-time and captured if have a happy or unhappy sentiment. Both are counted for each country and "happiness" is visualized on the map. Tweets with geolocation are mapped with an emoticon (mouseover to see the tweet). Real-time data from PubNub.</p>
       <br>
       <div id="chart" class="text-center">
       </div>
