added github link index.html

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <div class="container">
       <h1 class="text-center">How is the world feeling now?</h1>
       <h4 class="text-center">Mapping tweets in real-time. Made with Node and D3</h4>
-      <p>All tweets on Twitter are analyzed in real-time and captured if have a happy or unhappy sentiment. Both are counted for each country and "happiness" is visualized on the map. Tweets with geolocation are mapped with an emoticon (mouseover to see the tweet). Real-time data from PubNub.</p>
+      <p>All tweets on Twitter are analyzed in real-time and captured if have a happy or unhappy sentiment. Both are counted for each country and "happiness" is visualized on the map. Tweets with geolocation are mapped with an emoticon (mouseover to see the tweet). Real-time data from PubNub. <a href="https://github.com/chemok78/tweetmap" target="_blank">Code on Github</a> and inspired by work of <a href="https://blog.twitter.com/2014/tweet-emotion-real-time-tweet-analysis-with-pubnub-data-stream" target="_blank">Tomomi Imura</a>.</p>
       <br>
       <div id="chart" class="text-center">
       </div>
